# crypto-prices

./: .gitignore  README.md  coin_list.csv  coins.csv  config.ini  cron_jobs.txt  crontab_jobs.txt  fetch_prices.sh  main.py  pyproject.toml  requirements.txt  update_coins_csv.py
