[tool.poetry]
name = "crypto-prices-in-google-sheets"
version = "0.1.0"
description = ""
authors = ["kyo <odinxp@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pygsheets = "^2.0.5"
pycoingecko = "^2.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
